--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
+build_flags = -Os -flto -Wall -Wextra -Wshadow -Werror
 upload_port = /dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A61CYAFA-if00-port0
